<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ni_text_field_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ig_name_hint"
            app:helperText="Required"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:singleLine="true"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/standard"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?android:attr/textColorPrimary" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ni_chip_group_standard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:checkedChip="@+id/ni_us_chip"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/ni_us_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/us_standard" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ni_metric_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_standard" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/measurement"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?android:attr/textColorPrimary" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ni_chip_group_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:checkedChip="@+id/ni_volume_chip"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/ni_volume_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ni_weight_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ni_absolute_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absolute" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/unit"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?android:attr/textColorPrimary" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ni_chip_group_unit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:checkedChip="@+id/ni_us_chip"
            app:singleSelection="true">

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ni_text_field_quantity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ig_quantity_hint"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</ScrollView>
